Committing entity test and repository test