@@ -2,46 +2,59 @@ package com.bash.LytApp.service.ServiceImpl;
 
 import com.bash.LytApp.dto.UserDto;
 import com.bash.LytApp.entity.User;
+import com.bash.LytApp.exception.ResourceNotFoundException;
 import com.bash.LytApp.mapper.UserMapper;
 import com.bash.LytApp.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl {
     @Autowired
     private UserRepository userRepository;
 
-//    public List<UserDto> getAllUsers() {
-//        return userRepository.findAll().stream().map(this::convertToDTO).collect(Collectors.toList());
-//    }
+    //GET ALL USERS
+    public List<UserDto> getAllUsers() {
+        return userRepository.findAll().stream().map(UserMapper::mapToUserDto).toList();
+    }
 
+    //GET USER BY ID
     public UserDto getUserById(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
         return UserMapper.mapToUserDto(user);
     }
 
+    //CREATE USER
+    public UserDto createUser(UserDto  userDto) {
+        //check that User exists
+        if (userRepository.existsByEmail(userDto.email()) == true)
+            throw new ResourceNotFoundException("User already exists!!");
 
-    public UserDto createUser(User user) {
-        User savedUser = userRepository.save(user);
+        User savedUser = userRepository.save(UserMapper.mapToCreateUser(userDto));
         return UserMapper.mapToUserDto(savedUser);
     }
 
-//    private UserDto convertToDTO(User user) {
-//        UserDto userDto = new UserDto();
-//        userDto.setId(user.getId());
-//        userDto.setFirstName(user.getFirstName());
-//        userDto.setLastName(user.getLastName());
-//        userDto.setEmail(user.getEmail());
-//        userDto.setCreationDate(user.getCreationDate());
-//        if (user.getRole() != null) {
-//            userDto.setRoleName(user.getRole().getName());
-//        }
-//        return userDto;
-//    }
+    //UPDATE USER
+    public UserDto updateUser(UserDto userDto){
+        User user = userRepository.findByEmail(userDto.email())
+                .orElseThrow(()-> new ResourceNotFoundException("User not found!"));
+
+        User savedUser = userRepository.save(UserMapper.mapToUpdateUser(user, userDto));
+        return UserMapper.mapToUserDto(savedUser);
+    }
+
+    //DELETE USER
+    public String deleteUser(UserDto userDto){
+        User user = userRepository.findByEmail(userDto.email())
+                .orElseThrow(()-> new ResourceNotFoundException("User not found!"));
+
+        userRepository.delete(user);
+
+        return "User has been successfully deleted.";
+    }
+
 
 }
